# AIX

./: .gitignore  CMakeLists.txt  README.MD  build.py
Targets/AIXBenchmarks/: CMakeLists.txt  Common.hpp  Device.cpp  Fuse.cpp  Main.cpp  Model.cpp  Tensor.cpp
Targets/AIXExamples/XORApp/: CMakeLists.txt
Targets/AIXExamples/XORLayerApp/: CMakeLists.txt
Targets/AIXExamples/XORMetalApp/: CMakeLists.txt  Main.cpp
Targets/AIXExamples/XORSequentialApp/: CMakeLists.txt  Main.cpp
Targets/AIXLib/: CMakeLists.txt  aix.hpp  aixCore.hpp  aixDevice.hpp  aixDeviceCPU.cpp  aixDeviceCPU.hpp  aixDeviceMetal.cpp  aixDeviceMetal.hpp  aixDeviceMetalCache.hpp  aixDeviceMetalKernelGen.cpp  aixDeviceMetalKernelGen.hpp  aixDeviceMetalShaders.hpp  aixDeviceType.hpp  aixDevices.cpp  aixFloat16.hpp  aixFuse.cpp  aixFuse.hpp  aixNeuralNetwork.hpp  aixOptimizer.hpp  aixVersion.hpp
Targets/AIXTests/: AutoGradTests.cpp  CMakeLists.txt  DeviceTests.cpp  Float16Tests.cpp  FunctionalTests.cpp  LossTests.cpp  OptimizerTests.cpp  TensorTests.cpp  TensorValueTests.cpp  Utils.hpp
